[VEUE-573] Fix Line Height Issue On Video Card
See the clickup task for showing it… but basically I had the css applying to too much, so by cutting it down we fix the video card display.

Also, since I was nearby, I rephrased the “Not Yet Live” copy.

--- a/app/javascript/style/video/_layout.scss
+++ b/app/javascript/style/video/_layout.scss
@@ -17,6 +17,12 @@
     width: 100%;
   }
 
+  #upcoming-stream {
+    .content-area__primary {
+      flex: 1;
+    }
+  }
+
   .primary-video-area {
     // This is required to ensure that the controls can be shown over this area
     position: relative;
@@ -71,21 +77,23 @@
           display: none;
         }
 
-        // If you don't specify the line height as 0
-        // then there is spacing on the bottom of the canvas
-        // but we don't want this to cascade into the header so
-        // we revert it in the header part of the video area
-        line-height: 0;
-        .primary-video__header {
-          line-height: normal;
-        }
+        .primary-video {
+          // If you don't specify the line height as 0
+          // then there is spacing on the bottom of the canvas
+          // but we don't want this to cascade into the header so
+          // we revert it in the header part of the video area
+          line-height: 0;
+          &__header {
+            line-height: normal;
+          }
 
-        canvas.primary-canvas {
-          width: unset;
-          max-height: 68vh;
-          max-width: 100%;
-          // Overridden for Desktop
-          border-radius: 0;
+          canvas.primary-canvas {
+            width: unset;
+            max-height: 68vh;
+            max-width: 100%;
+            // Overridden for Desktop
+            border-radius: 0;
+          }
         }
       }
 
